Manually made index page responsive

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name='twitter:title' content="Social Media TestDrive">
     <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
     <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
@@ -64,142 +64,143 @@
       <h1>Learn Essential Skills</h1>
       <p class="caption">Our modules are designed to teach youth about skills for entering
       social media. Check out a few below!</p>
-        <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#moduleCarousel" data-slide-to="1" class="active"></li>
-            <li data-target="#moduleCarousel" data-slide-to="2" class="active"></li>
-            <li data-target="#moduleCarousel" data-slide-to="3" class="active"></li>
-            <li data-target="#moduleCarousel" data-slide-to="4" class="active"></li>
-            <li data-target="#moduleCarousel" data-slide-to="5" class="active"></li>
-          </ol>
 
-          <div class="carousel-inner">
-            <!-- zero -->
-            <div class="carousel-item active">
-              <div class="carousel-content-container">
-                <a href="modules.html">
-                  <div class="carousel-text">
-                    <h3 class="module-title">Is it Private Information?</h3>
-                    <p>This module teaches what is safe to share with different
-                      social media audiences and what kind of information is
-                      inappropriate to share on social media.</p>
-                    <button class="module-button" type="button" onclick="window.
-                    location.href = 'modules.html';"><span id="button-text">
-                      Launch</span></button>
-                  </div>
-                  <div class="module-image">
-                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </a>
+    </div>
+    <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#moduleCarousel" data-slide-to="1" class="active"></li>
+        <li data-target="#moduleCarousel" data-slide-to="2" class="active"></li>
+        <li data-target="#moduleCarousel" data-slide-to="3" class="active"></li>
+        <li data-target="#moduleCarousel" data-slide-to="4" class="active"></li>
+        <li data-target="#moduleCarousel" data-slide-to="5" class="active"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <!-- zero -->
+        <div class="carousel-item active">
+          <div class="carousel-content-container">
+            <a href="modules.html">
+              <div class="carousel-text">
+                <h3 class="module-title">Is it Private Information?</h3>
+                <p>This module teaches what is safe to share with different
+                  social media audiences and what kind of information is
+                  inappropriate to share on social media.</p>
+                <button class="module-button" type="button" onclick="window.
+                location.href = 'modules.html';"><span id="button-text">
+                  Launch</span></button>
               </div>
-            </div>
-            <!-- one -->
-            <div class="carousel-item">
-              <div class="carousel-content-container">
-                <a href="modules.html">
-                  <div class="carousel-text">
-                    <h3 class="module-title">Shaping Your Digital Footprint</h3>
-                    <p>This module teaches how actions on social media create a
-                       digital footprint and skills to positively shape digital
-                       footprints.</p>
-                    <button class="module-button" type="button" onclick="window.
-                    location.href = 'modules.html';"><span id="button-text">
-                      Launch</span></button>
-                  </div>
-                  <div class="module-image">
-                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </a>
+              <div class="module-image">
+                <img class="placeholder" src="img/placeholder.png" alt="placeholder">
               </div>
-            </div>
-            <!-- two -->
-            <div class="carousel-item">
-              <div class="carousel-content-container">
-                <a href="modules.html">
-                  <div class="carousel-text">
-                    <h3 class="module-title">Upstanding to Cyberbullying</h3>
-                    <p>This module teaches how to detect signs of cyberbullying
-                      and how to respond when seeing cyberbullying happening to
-                      others.</p>
-                    <button class="module-button" type="button" onclick="window.
-                    location.href = 'modules.html';"><span id="button-text">
-                      Launch</span></button>
-                  </div>
-                  <div class="module-image">
-                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- three -->
-            <div class="carousel-item">
-              <div class="carousel-content-container">
-                <a href="modules.html">
-                  <div class="carousel-text">
-                    <h3 class="module-title">Online Identities</h3>
-                    <p>This module teaches how to manage self-presentation and
-                      how online identities can change with different audiences
-                       on social media.</p>
-                    <button class="module-button" type="button" onclick="window.
-                    location.href = 'modules.html';"><span id="button-text">
-                      Launch</span></button>
-                  </div>
-                  <div class="module-image">
-                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- four -->
-            <div class="carousel-item">
-              <div class="carousel-content-container">
-                <a href="modules.html">
-                  <div class="carousel-text">
-                    <h3 class="module-title">Social Media Privacy</h3>
-                    <p>This module teaches how social media sites collect
-                      information about users and offers strategies for
-                      protecting privacy on social media.</p>
-                    <button class="module-button" type="button" onclick="window.
-                    location.href = 'modules.html';"><span id="button-text">
-                      Launch</span></button>
-                  </div>
-                  <div class="module-image">
-                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- five -->
-            <div class="carousel-item">
-              <div class="carousel-content-container">
-                <a href="modules.html">
-                  <div class="carousel-text">
-                    <h3 class="module-title">News in Social Media</h3>
-                    <p>This module teaches why fake news exists and how to
-                      identify the telltale signs of fake news on social media.</p>
-                    <button class="module-button" type="button" onclick="window.
-                    location.href = 'modules.html';"><span id="button-text">
-                      Launch</span></button>
-                  </div>
-                  <div class="module-image">
-                    <img class="placeholder" src="img/placeholder.png" alt="placeholder">
-                  </div>
-                </a>
-              </div>
-            </div>
+            </a>
           </div>
-          <a class="carousel-control-prev" href="#moduleCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#moduleCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        </div>
+        <!-- one -->
+        <div class="carousel-item">
+          <div class="carousel-content-container">
+            <a href="modules.html">
+              <div class="carousel-text">
+                <h3 class="module-title">Shaping Your Digital Footprint</h3>
+                <p>This module teaches how actions on social media create a
+                   digital footprint and skills to positively shape digital
+                   footprints.</p>
+                <button class="module-button" type="button" onclick="window.
+                location.href = 'modules.html';"><span id="button-text">
+                  Launch</span></button>
+              </div>
+              <div class="module-image">
+                <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- two -->
+        <div class="carousel-item">
+          <div class="carousel-content-container">
+            <a href="modules.html">
+              <div class="carousel-text">
+                <h3 class="module-title">Upstanding to Cyberbullying</h3>
+                <p>This module teaches how to detect signs of cyberbullying
+                  and how to respond when seeing cyberbullying happening to
+                  others.</p>
+                <button class="module-button" type="button" onclick="window.
+                location.href = 'modules.html';"><span id="button-text">
+                  Launch</span></button>
+              </div>
+              <div class="module-image">
+                <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- three -->
+        <div class="carousel-item">
+          <div class="carousel-content-container">
+            <a href="modules.html">
+              <div class="carousel-text">
+                <h3 class="module-title">Online Identities</h3>
+                <p>This module teaches how to manage self-presentation and
+                  how online identities can change with different audiences
+                   on social media.</p>
+                <button class="module-button" type="button" onclick="window.
+                location.href = 'modules.html';"><span id="button-text">
+                  Launch</span></button>
+              </div>
+              <div class="module-image">
+                <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- four -->
+        <div class="carousel-item">
+          <div class="carousel-content-container">
+            <a href="modules.html">
+              <div class="carousel-text">
+                <h3 class="module-title">Social Media Privacy</h3>
+                <p>This module teaches how social media sites collect
+                  information about users and offers strategies for
+                  protecting privacy on social media.</p>
+                <button class="module-button" type="button" onclick="window.
+                location.href = 'modules.html';"><span id="button-text">
+                  Launch</span></button>
+              </div>
+              <div class="module-image">
+                <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- five -->
+        <div class="carousel-item">
+          <div class="carousel-content-container">
+            <a href="modules.html">
+              <div class="carousel-text">
+                <h3 class="module-title">News in Social Media</h3>
+                <p>This module teaches why fake news exists and how to
+                  identify the telltale signs of fake news on social media.</p>
+                <button class="module-button" type="button" onclick="window.
+                location.href = 'modules.html';"><span id="button-text">
+                  Launch</span></button>
+              </div>
+              <div class="module-image">
+                <img class="placeholder" src="img/placeholder.png" alt="placeholder">
+              </div>
+            </a>
+          </div>
         </div>
       </div>
+      <!--<a class="carousel-control-prev" href="#moduleCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#moduleCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>-->
     </div>
+
   </main>
 
   <footer class="footer">
