--- a/modules.html
+++ b/modules.html
@@ -2,9 +2,8 @@
 
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/modules.css" media="all">
@@ -39,72 +38,114 @@
     </div>
   </header>
   <main>
-    <h1>Learn Through Practice</h1>
-    <p class="caption">Check out the modules below to see what kinds of digital
-       citizenship skills we teach. </p>
-    <div class="modules_container">
-     <a href="https://app.socialmediatestdrive.org/intro/cyberbullying">
-       <div class="moduleBox">
-        <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
-        <div class="Bottom_TextHalf">
-          <p class="lessonBox_title">How to Be an Upstander</p>
-          <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
-          <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
-          </p>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col">
+          <h1>Learn Through Practice</h1>
         </div>
       </div>
-     </a>
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <p class="caption">Check out the modules below to see what kinds of
+            digital citizenship skills we teach. </p>
+        </div>
+      </div>
 
-     <a href="https://app.socialmediatestdrive.org/intro/safe-posting"><div class="moduleBox">
-        <div class="Top_PicHalf" id="lesson_Info"></div>
-        <div class="Bottom_TextHalf">
-          <p class="lessonBox_title">Is it Private Information?</p>
-          <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
-          <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
-          </p>
+      <!--<div class="modules_container">-->
+      <div class="row">
+        <div class="col">
+          <a href="https://app.socialmediatestdrive.org/intro/cyberbullying">
+            <div class="moduleBox">
+              <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
+              <div class="Bottom_TextHalf">
+                <p class="lessonBox_title">How to Be an Upstander</p>
+                <p>This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
+                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
+                </p>
+              </div>
+            </div>
+          </a>
         </div>
-      </div></a>
-        <a href="https://app.socialmediatestdrive.org/intro/digfoot"><div class="moduleBox">
-        <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
-        <div class="Bottom_TextHalf">
-          <p class="lessonBox_title">Shaping Your Digital Footprint</p>
-          <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
-          <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
+
+        <div class="col">
+          <a href="https://app.socialmediatestdrive.org/intro/safe-posting">
+            <div class="moduleBox">
+              <div class="Top_PicHalf" id="lesson_Info"></div>
+              <div class="Bottom_TextHalf">
+                <p class="lessonBox_title">Is it Private Information?</p>
+                <p>This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
+                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
+                </p>
+              </div>
+            </div>
+          </a>
         </div>
-      </div></a>
-      <a href="https://app.socialmediatestdrive.org/intro/presentation"><div class="moduleBox">
-        <div class="Top_PicHalf" id="lesson_Online"></div>
-        <div class="Bottom_TextHalf">
-          <p class="lessonBox_title">Online Identities</p>
-          <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
-          <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
-          </p>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <a href="https://app.socialmediatestdrive.org/intro/digfoot"><div class="moduleBox">
+            <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
+            <div class="Bottom_TextHalf">
+              <p class="lessonBox_title">Shaping Your Digital Footprint</p>
+              <p>This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
+              <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
+              </div>
+            </div>
+          </a>
         </div>
-      </div></a>
-      <a href="https://app.socialmediatestdrive.org/intro/privacy"><div class="moduleBox">
-        <div class="Top_PicHalf" id="lesson_Privacy"></div>
-        <div class="Bottom_TextHalf">
-          <p class="lessonBox_title">Social Media Privacy</p>
-          <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
-          <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
+        <div class="col">
+          <a href="https://app.socialmediatestdrive.org/intro/presentation">
+            <div class="moduleBox">
+              <div class="Top_Pic>Half" id="lesson_Online"></div>
+              <div class="Bottom_TextHalf">
+                <p class="lessonBox_title">Online Identities</p>
+                <p>This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
+                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
+                </p>
+              </div>
+            </div>
+          </a>
         </div>
-      </div></a>
-         <a href="https://app.socialmediatestdrive.org/intro/digital-literacy"><div class="moduleBox">
-        <div class="Top_PicHalf" id="lesson_News"></div>
-        <div class="Bottom_TextHalf">
-          <p class="lessonBox_title">News in Social Media</p>
-          <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
-          <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
-          </p>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <a href="https://app.socialmediatestdrive.org/intro/privacy">
+            <div class="moduleBox">
+              <div class="Top_PicHalf" id="lesson_Privacy"></div>
+              <div class="Bottom_TextHalf">
+                <p class="lessonBox_title">Social Media Privacy</p>
+                <p>This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
+                <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a href="https://app.socialmediatestdrive.org/intro/digital-literacy">
+              <div class="moduleBox">
+                <div class="Top_PicHalf" id="lesson_News"></div>
+                <div class="Bottom_TextHalf">
+                  <p class="lessonBox_title">News in Social Media</p>
+                  <p>This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
+                  <p><span >Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
-      </div></a>
+      </div>
     </div>
   </main>
   <footer class="footer">
     <p id="footer-text">Social Media TestDrive</p>
     <a id="footer-links" href="terms.html">Terms & Copyright</p>
   </footer>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
 <!-- <html>
