--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
    <div id="container">
     <div class="section1">
       <div id="intro">
-        <h1>Practice digital literacy through a <span class="gold_accent">social media simulation</span>.</h1>
-        <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
+        <h1>Practice digital literacy through a <span class="gold_accent">
+          social media simulation</span>.</h1>
+        <p>Social Media TestDrive lets young people practice
+          digital citizenship skills in a simulated, realistic social media
+          environment.</p>
         <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
       </div>
       <div id="home_graphic">
